--- a/main.css
+++ b/main.css
@@ -8,72 +8,76 @@
     background-color: #000000;
     overflow-x: hidden;
     padding-top: 20px;
-  }
+}
 
-  .sidenav img {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
-    border-radius: 100%;
-  }
+.sidenav img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+  border-radius: 100%;
+}
 
-  .sidenav h1 {
-    color: white;
-    text-align: center;
-  }
-  
-  .sidenav a {
-    padding: 23px 8px 6px 16px;
-    text-decoration: none;
-    font-size: 22px;
-    color: #818181;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
-    /* text-align: center; */
-  }
+.sidenav h1 {
+  color: white;
+  text-align: center;
+}
 
-  .menu {
-    padding-top: 20px;
-  }
-  
-  .sidenav a:hover {
-    color: #f1f1f1;
-  }
-  
-  .main {
-    margin-left: 300px; /* Same as the width of the sidenav */
-    font-size: 28px; /* Increased text to enable scrolling */
-    padding: 0px 10px;
-  }
+.sidenav a {
+  padding: 23px 8px 6px 16px;
+  text-decoration: none;
+  font-size: 22px;
+  color: #818181;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+  /* text-align: center; */
+}
+.sidenav a:hover {
+  border-width: 50%;
+  border-bottom: solid yellow;
+}
 
-  @media screen and (max-height: 450px) {
-    .sidenav {padding-top: 15px;}
-    .sidenav a {font-size: 18px;}
-  }
+.menu {
+  padding-top: 20px;
+}
 
-  body {
-    margin: 0;
-    padding: 0;
-    background: url('asset/background-image.webp') center/cover no-repeat; /* Replace 'your-background-image.jpg' with your actual image URL */
-    height: 100vh;
-    display: flex;
-  }
+.sidenav a:hover {
+  color: #f1f1f1;
+}
 
-  .overlay {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.3); /* Adjust the alpha (fourth value) to control transparency */
-  }
+.main {
+  margin-left: 300px; /* Same as the width of the sidenav */
+  font-size: 28px; /* Increased text to enable scrolling */
+  padding: 0px 10px;
+}
 
-  .content {
-    z-index: 1; /* Place content above the overlay */
-    /* Add your content styling here */
-    color: #333;
-    text-align: center;
-    padding: 20px;
-    background: #fff; /* Optional: Add a solid background for the content */
-  }
+@media screen and (max-height: 450px) {
+  .sidenav {padding-top: 15px;}
+  .sidenav a {font-size: 18px;}
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  background: url('asset/background-image.webp') center/cover no-repeat; /* Replace 'your-background-image.jpg' with your actual image URL */
+  height: 100vh;
+  display: flex;
+}
+
+.overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.3); /* Adjust the alpha (fourth value) to control transparency */
+}
+
+.content {
+  z-index: 1; /* Place content above the overlay */
+  /* Add your content styling here */
+  color: #333;
+  text-align: center;
+  padding: 20px;
+  background: #fff; /* Optional: Add a solid background for the content */
+}
