--- a/main.css
+++ b/main.css
@@ -16,6 +16,7 @@
   margin-right: auto;
   width: 50%;
   border-radius: 100%;
+  border: rgb(44, 44, 44) solid 7px;
 }
 
 .sidenav h1 {
@@ -59,41 +60,40 @@
 }
 
 body {
-  margin: 0;
-  padding: 0;
-  background: url('asset/background-image.webp') center/cover no-repeat; /* Replace 'your-background-image.jpg' with your actual image URL */
-  background-position: 300px 0; /* Move the background image by 300 pixels to the right */
-  height: 100vh;
-  overflow: hidden;
+  background-image: url(asset/background-image.webp);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  background-position: 300px 0;
 }
 
-.container {
-  position: relative;
-  height: 100%;
-  overflow-y: auto; /* Allow the container to scroll */
-  z-index: 1; /* Place the container above the fixed overlay */
-}
-
-.overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.2); /* Adjust the alpha (fourth value) to control transparency */
-  pointer-events: none;
-}
-
-.content {
-  z-index: 1; /* Place content above the overlay */
-  /* Add your content styling here */
-  text-align: center;
-  padding: 20px;
-  float: left;
-}
-
-.logo img{
+.logo img {
+  float: right;
   width: 150px;
   height: 150px;
-  float: right;
+}
+
+.content h1{
+  position: absolute;
+  left: 600px;
+  top: 400px;
+}
+
+.content h4{
+  position: absolute;
+  left: 600px;
+  top: 480px;
+}
+
+.auto-type {
+  border-bottom: yellow solid;
+}
+
+.content_2 {
+  position: absolute;
+  left: 300px;
+  top: 1000px;
+  background-color: #818181;
+  width: 83.3%;
+  padding-left: 10px;
 }
