--- a/main.css
+++ b/main.css
@@ -27,7 +27,7 @@
 .sidenav a {
   padding: 23px 8px 6px 16px;
   text-decoration: none;
-  font-size: 22px;
+  font-size: 20px;
   color: #818181;
   display: block;
   margin-left: auto;
@@ -38,6 +38,14 @@
 .sidenav a:hover {
   border-width: 50%;
   border-bottom: solid yellow;
+}
+
+.sidenav p {
+  position: absolute;
+  bottom: 20px;
+  left: 25%;
+  color: white;
+  text-align: center;
 }
 
 .menu {
@@ -65,6 +73,8 @@ body {
   background-attachment: fixed;
   background-size: cover;
   background-position: 300px 0;
+
+  font-family: 'Roboto Slab', sans-serif;
 }
 
 .logo img {
@@ -76,7 +86,7 @@ body {
 .content h1{
   position: absolute;
   left: 600px;
-  top: 400px;
+  top: 330px;
 }
 
 .content h4{
@@ -90,10 +100,57 @@ body {
 }
 
 .content_2 {
-  position: absolute;
-  left: 300px;
+  position: relative;
+  left: 0px;
   top: 1000px;
-  background-color: #818181;
-  width: 83.3%;
-  padding-left: 10px;
+  background-color: #c6def1;
+  padding: 20px 50px 20px 50px;
+}
+
+.intro {
+  padding: 20px;
+  display: flex;
+  flex-direction: row;
+}
+
+.container_p {
+  display: flex;
+  flex-direction: row;
+  height: 300px;
+  width: auto;
+  padding-right: 100px;
+  padding-left: 200px;
+}
+
+.container_p p {
+  position: relative;
+  top: 25%;
+  font-size: large;
+}
+
+.container_img {
+  display: flex;
+  flex-direction: row;
+  height: 300px;
+  width: auto;
+  justify-content: center;
+  padding-right: 200px;
+}
+
+.container_img img {
+  height: 400px;
+  width: 250px;
+}
+
+.box_container {
+  display: flex;
+  justify-content: space-between; /* Adjust as needed */
+  padding: 10;
+}
+
+.box1, .box2, .box3, .box4, .box5 {
+  width: 250px;
+  height: 250px;
+  border: red solid;
+  padding: 10px;
 }
