--- a/main.css
+++ b/main.css
@@ -59,7 +59,7 @@
 .main {
   margin-left: 300px; /* Same as the width of the sidenav */
   font-size: 28px; /* Increased text to enable scrolling */
-  padding: 0px 10px;
+  padding: 10px 50px 10px 50px;
 }
 
 @media screen and (max-height: 450px) {
@@ -103,11 +103,15 @@ body {
   position: relative;
   left: 0px;
   top: 1000px;
-  background-color: #c6def1;
+  box-shadow: 15px 15px 30px rgb(48, 48, 48);
+  backdrop-filter: blur(10px);
+  border:  5px solid transparent;
+  border-image: linear-gradient(to right bottom,rgb(52, 233, 218) , white, rgb(52, 233, 218), white, rgb(52, 233, 218), white, rgb(52, 233, 218));
+  border-image-slice: 1;
   padding: 20px 50px 20px 50px;
 }
 
-.intro {
+/* .intro {
   padding: 20px;
   display: flex;
   flex-direction: row;
@@ -125,32 +129,123 @@ body {
 .container_p p {
   position: relative;
   top: 25%;
-  font-size: large;
+  font-size: 25px;
 }
 
 .container_img {
   display: flex;
   flex-direction: row;
-  height: 300px;
   width: auto;
   justify-content: center;
   padding-right: 200px;
 }
 
-.container_img img {
-  height: 400px;
-  width: 250px;
+.intro img {
+  height: 498px;
+  width: 489px;
+} */
+
+.container_intro {
+  max-width: 800px;
+  margin: 10px auto;
+  overflow: hidden;
 }
 
-.box_container {
-  display: flex;
-  justify-content: space-between; /* Adjust as needed */
-  padding: 10;
+.column_intro {
+  float: left;
+  width: 50%;
 }
 
-.box1, .box2, .box3, .box4, .box5 {
-  width: 250px;
-  height: 250px;
-  border: red solid;
-  padding: 10px;
+.image {
+  display: block;
+  width: 100%;
+  height: auto;
 }
+
+.description {
+  padding: 20px;
+}
+
+.skills {
+  border: solid;
+  background-color: rgba(255, 255, 255, 0.5);
+}
+
+.container_skills {
+  max-width: 800px;
+  margin: 20px auto;
+  overflow: hidden;
+}
+
+.column {
+  float: left;
+  width: 50%;
+}
+
+.box {
+  height: auto;
+  width: auto;
+  border: black solid;
+  padding: 20px;
+  overflow: hidden;
+  margin: 0px 0px 30px 0px;
+  background-color: rgb(255, 255, 255, 0.5);
+}
+
+/* .box_container {
+  border: black solid;
+} */
+
+.column_box1_1{
+  float: left;
+  width: 20%;
+}
+
+.column_box1_2{
+  float: right;
+  width: 80%;
+}
+
+.column_box2_1 {
+  float: right;
+  width: 20%;
+}
+
+.column_box2_2 {
+  float: left;
+  width: 80%;
+}
+
+.column_box3_1{
+  float: left;
+  width: 20%;
+}
+
+.column_box3_2{
+  float: right;
+  width: 80%;
+}
+
+.column_box4_1 {
+  float: right;
+  width: 20%;
+}
+
+.column_box4_2 {
+  float: left;
+  width: 80%;
+}
+
+.column_box5_1{
+  float: left;
+  width: 20%;
+}
+
+.column_box5_2{
+  float: right;
+  width: 80%;
+}
+
+/* .column_box1 img {
+  margin: auto;
+} */
